# graphite-studio

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md
docs/: architecture.md  getting_started.md  gpu_subsystem.md  icon_loading_guide.md  ui_differences.md
include/core/: Application.h  BlendMath.h  BrushEngine.h  Compositor.h  Document.h  DocumentCommands.h  GLWrappers.h  HistoryManager.h  Image.h  Layer.h  LayerStack.h
include/gui/: CanvasView.h  ColorPanel.h  HistoryPanel.h  IconHelper.h  LayersPanel.h  OptionsBar.h  PropertiesPanel.h  StatusBar.h  Theme.h  Toolbar.h  Workspace.h
include/platform/: FileDialogs.h
src/: main.cpp
src/core/: Application.cpp  BrushEngine.cpp  Compositor.cpp  Document.cpp  DocumentCommands.cpp  GLWrappers.cpp  HistoryManager.cpp  Image.cpp  Layer.cpp  LayerStack.cpp
src/gui/: CanvasView.cpp  ColorPanel.cpp  HistoryPanel.cpp  IconHelper.cpp  LayersPanel.cpp  OptionsBar.cpp  PropertiesPanel.cpp  StatusBar.cpp  Theme.cpp  Toolbar.cpp  Workspace.cpp
src/platform/: FileDialogs.cpp
